<?xml version="1.0"?>
<package>
  <name>cram_semrec_test</name>
  <version>0.1.0</version>
  <description>
    Test.
  </description>
  
  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <maintainer email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>

  <run_depend>roslisp</run_depend>

</package>
