<?xml version="1.0"?>
<package>
  <name>test_lisp_package</name>
  <version>0.1.0</version>
  <description>
    Test.
  </description>
  
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>

  <run_depend>roslisp</run_depend>

</package>
